--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,79 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cda0a7a2",
+   "execution_count": 6,
+   "id": "0535fbb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog, messagebox\n",
     "\n",
-    "def select_file(index):\n",
-    "    # Open file dialog to select a file\n",
-    "    file_path = filedialog.askopenfilename(title=\"Select a File\", filetypes=[(\"All Files\", \"*.*\")])\n",
-    "    \n",
-    "    if file_path:  # If a file is selected\n",
-    "        selected_files[index] = file_path  # Save the selected file\n",
-    "        labels[index].config(text=file_path)  # Update label with the file path\n",
+    "class ExcelSheetSelector:\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Excel Sheet Selector\")\n",
     "\n",
-    "def confirm_selection():\n",
-    "    # Check how many files have been selected\n",
-    "    num_selected = sum(1 for file in selected_files if file)\n",
-    "    \n",
-    "    if num_selected == 0:\n",
-    "        messagebox.showwarning(\"Warning\", \"No files selected.\")\n",
-    "    else:\n",
-    "        # Show confirmation dialog with options to Confirm or Select More Files\n",
-    "        result = messagebox.askquestion(\"Confirmation\", f\"You have selected {num_selected} files. Do you want to proceed?\", icon='question')\n",
+    "        # Custom labels for each file selection\n",
+    "        self.custom_labels = [\n",
+    "            \"Select First File:\", \"Select Second File:\", \"Select Third File:\", \"Select Fourth File:\",\n",
+    "            \"Select Fifth File:\", \"Select Sixth File:\", \"Select Seventh File:\", \"Select Eighth File:\"\n",
+    "        ]\n",
+    "\n",
+    "        # List to hold selected file paths, initially None\n",
+    "        self.selected_files = [None] * 8\n",
+    "        self.labels = []\n",
+    "\n",
+    "        # Create custom labels and buttons for selecting files\n",
+    "        for i in range(8):\n",
+    "            # Create a custom label for each file selection\n",
+    "            custom_label = tk.Label(root, text=self.custom_labels[i], width=20, anchor='w')\n",
+    "            custom_label.grid(row=i, column=0, padx=10, pady=5)\n",
+    "\n",
+    "            # Create a label to display the selected file path\n",
+    "            label = tk.Label(root, text=\"Not selected\", width=60, anchor='w')\n",
+    "            label.grid(row=i, column=1, padx=10, pady=5)\n",
+    "            self.labels.append(label)\n",
+    "\n",
+    "            # Create a button for each file selection\n",
+    "            button = tk.Button(root, text=\"Browse\", command=lambda index=i: self.select_file(index))\n",
+    "            button.grid(row=i, column=2, padx=10, pady=5)\n",
+    "\n",
+    "        # Button to confirm file selections\n",
+    "        confirm_button = tk.Button(root, text=\"Confirm Selection\", command=self.confirm_selection)\n",
+    "        confirm_button.grid(row=8, column=0, columnspan=3, pady=20)\n",
+    "\n",
+    "    def select_file(self, index):\n",
+    "        # Open file dialog to select a file\n",
+    "        file_path = filedialog.askopenfilename(title=\"Select a File\", filetypes=[(\"All Files\", \"*.*\")])\n",
     "        \n",
-    "        if result == 'yes':\n",
-    "            # Proceed and close the application\n",
-    "            messagebox.showinfo(\"Proceed\", \"Files are selected. Proceeding with the application.\")\n",
-    "            # Add here the code to work with the selected files\n",
-    "            # For example: process_files(selected_files[:num_selected])\n",
-    "            root.destroy()\n",
+    "        if file_path:  # If a file is selected\n",
+    "            self.selected_files[index] = file_path  # Save the selected file\n",
+    "            self.labels[index].config(text=file_path)  # Update label with the file path\n",
+    "\n",
+    "    def confirm_selection(self):\n",
+    "        # Check how many files have been selected\n",
+    "        num_selected = sum(1 for file in self.selected_files if file)\n",
+    "\n",
+    "        if num_selected == 0:\n",
+    "            messagebox.showwarning(\"Warning\", \"No files selected.\")\n",
     "        else:\n",
-    "            # Allow the user to select more files\n",
-    "            messagebox.showinfo(\"Select More\", \"Please select more files.\")\n",
+    "            # Show confirmation dialog with options to Confirm or Select More Files\n",
+    "            result = messagebox.askquestion(\n",
+    "                \"Confirmation\", \n",
+    "                f\"You have selected {num_selected} files. Do you want to proceed?\", \n",
+    "                icon='question'\n",
+    "            )\n",
+    "            \n",
+    "            if result == 'yes':\n",
+    "                # Proceed and close the application\n",
+    "                messagebox.showinfo(\"Proceed\", \"Files are selected. Proceeding with the application.\")\n",
+    "                # Add here the code to work with the selected files\n",
+    "                # For example: process_files(self.selected_files[:num_selected])\n",
+    "                self.root.destroy()\n",
+    "            else:\n",
+    "                # Allow the user to select more files\n",
+    "                messagebox.showinfo(\"Select More\", \"Please select more files.\")\n",
     "\n",
-    "# Initialize the Tkinter window\n",
-    "root = tk.Tk()\n",
-    "root.title(\"File Selector\")\n",
-    "\n",
-    "# Custom labels for each file selection\n",
-    "custom_labels = [\"Select First File:\", \"Select Second File:\", \"Select Third File:\", \"Select Fourth File:\", \n",
-    "                 \"Select Fifth File:\", \"Select Sixth File:\", \"Select Seventh File:\", \"Select Eighth File:\"]\n",
-    "\n",
-    "# List to hold selected file paths, initially None\n",
-    "selected_files = [None] * 8\n",
-    "labels = []\n",
-    "\n",
-    "# Create custom labels and buttons for selecting files\n",
-    "for i in range(8):\n",
-    "    # Create a custom label for each file selection\n",
-    "    custom_label = tk.Label(root, text=custom_labels[i], width=20, anchor='w')\n",
-    "    custom_label.grid(row=i, column=0, padx=10, pady=5)\n",
-    "\n",
-    "    # Create a label to display the selected file path\n",
-    "    label = tk.Label(root, text=\"Not selected\", width=60, anchor='w')\n",
-    "    label.grid(row=i, column=1, padx=10, pady=5)\n",
-    "    labels.append(label)\n",
-    "    \n",
-    "    # Create a button for each file selection\n",
-    "    button = tk.Button(root, text=\"Browse\", command=lambda index=i: select_file(index))\n",
-    "    button.grid(row=i, column=2, padx=10, pady=5)\n",
-    "\n",
-    "# Button to confirm file selections\n",
-    "confirm_button = tk.Button(root, text=\"Confirm Selection\", command=confirm_selection)\n",
-    "confirm_button.grid(row=8, column=0, columnspan=3, pady=20)\n",
-    "\n",
-    "root.mainloop()\n"
+    "# Initialize the Tkinter window and ExcelSheetSelector class\n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    app = ExcelSheetSelector(root)\n",
+    "    root.mainloop()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a36d374c",
    "metadata": {},
    "outputs": [],
