--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0535fbb3",
+   "id": "65cafe26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "\n",
     "        # Custom labels for each file selection\n",
     "        self.custom_labels = [\n",
-    "            \"Select First File:\", \"Select Second File:\", \"Select Third File:\", \"Select Fourth File:\",\n",
+    "            \"Select OFile:\", \"Select CFile:\", \"Select DFile:\", \"Select Fourth File:\",\n",
     "            \"Select Fifth File:\", \"Select Sixth File:\", \"Select Seventh File:\", \"Select Eighth File:\"\n",
     "        ]\n",
     "\n",
@@ -44,6 +44,16 @@
     "        confirm_button = tk.Button(root, text=\"Confirm Selection\", command=self.confirm_selection)\n",
     "        confirm_button.grid(row=8, column=0, columnspan=3, pady=20)\n",
     "\n",
+    "        # Predefined variable names for file paths\n",
+    "        self.OFile = None\n",
+    "        self.CFile = None\n",
+    "        self.DFile = None\n",
+    "        self.file4 = None\n",
+    "        self.file5 = None\n",
+    "        self.file6 = None\n",
+    "        self.file7 = None\n",
+    "        self.file8 = None\n",
+    "\n",
     "    def select_file(self, index):\n",
     "        # Open file dialog to select a file\n",
     "        file_path = filedialog.askopenfilename(title=\"Select a File\", filetypes=[(\"All Files\", \"*.*\")])\n",
@@ -67,14 +77,27 @@
     "            )\n",
     "            \n",
     "            if result == 'yes':\n",
-    "                # Proceed and close the application\n",
+    "                # Directly assign file paths to predefined variables\n",
+    "                self.assign_file_paths()\n",
     "                messagebox.showinfo(\"Proceed\", \"Files are selected. Proceeding with the application.\")\n",
-    "                # Add here the code to work with the selected files\n",
-    "                # For example: process_files(self.selected_files[:num_selected])\n",
+    "                # Print assigned files for verification\n",
+    "                print(self.OFile, self.CFile, self.DFile, self.file4, self.file5, self.file6, self.file7, self.file8)\n",
+    "                # Close the GUI\n",
     "                self.root.destroy()\n",
     "            else:\n",
     "                # Allow the user to select more files\n",
     "                messagebox.showinfo(\"Select More\", \"Please select more files.\")\n",
+    "\n",
+    "    def assign_file_paths(self):\n",
+    "        \"\"\"Assigns selected file paths to predefined variables.\"\"\"\n",
+    "        self.OFile = self.selected_files[0] if len(self.selected_files) > 0 else None\n",
+    "        self.CFile = self.selected_files[1] if len(self.selected_files) > 1 else None\n",
+    "        self.DFile = self.selected_files[2] if len(self.selected_files) > 2 else None\n",
+    "        self.file4 = self.selected_files[3] if len(self.selected_files) > 3 else None\n",
+    "        self.file5 = self.selected_files[4] if len(self.selected_files) > 4 else None\n",
+    "        self.file6 = self.selected_files[5] if len(self.selected_files) > 5 else None\n",
+    "        self.file7 = self.selected_files[6] if len(self.selected_files) > 6 else None\n",
+    "        self.file8 = self.selected_files[7] if len(self.selected_files) > 7 else None\n",
     "\n",
     "# Initialize the Tkinter window and ExcelSheetSelector class\n",
     "if __name__ == \"__main__\":\n",
