--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,10 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "65cafe26",
+   "execution_count": null,
+   "id": "64dabed1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load wb2\n",
+    "wb2_path = 'path_to_wb2.xlsx'  # Update with the actual path to wb2\n",
+    "wb2 = openpyxl.load_workbook(wb2_path, data_only=True)\n",
+    "\n",
+    "# Open the 'HC - Actual' sheet\n",
+    "sheet = wb2['HC - Actual']\n",
+    "\n",
+    "# Check the contents of cells E15 and F15\n",
+    "E15 = sheet['E15'].value\n",
+    "F15 = sheet['F15'].value\n",
+    "\n",
+    "# Define month headers\n",
+    "month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
+    "\n",
+    "# Determine the row that contains the headers for month-wise data (D onwards)\n",
+    "if E15 in month_headers and F15 in month_headers:\n",
+    "    header_row = 15\n",
+    "else:\n",
+    "    header_row = 14\n",
+    "\n",
+    "# Load data using pandas, specifying the header row and starting data from row 15\n",
+    "wb2_df = pd.read_excel(wb2_path, sheet_name='HC - Actual', header=header_row - 1, skiprows=range(0, 14))\n",
+    "\n",
+    "# Output the final DataFrame\n",
+    "print(wb2_df)\n",
+    "\n",
+    "# If you need to save the result to a new workbook or file\n",
+    "output_path = 'final_data.xlsx'  # Set the desired output file path\n",
+    "wb2_df.to_excel(output_path, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7fc2a326",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/KS/data.xlsx None None None None None C:/Users/KS/final_output.xlsx None\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog, messagebox\n",
