--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,42 +3,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64dabed1",
+   "id": "8f260ede",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openpyxl\n",
     "import pandas as pd\n",
+    "from pyxlsb import open_workbook\n",
     "\n",
-    "# Load wb2\n",
-    "wb2_path = 'path_to_wb2.xlsx'  # Update with the actual path to wb2\n",
-    "wb2 = openpyxl.load_workbook(wb2_path, data_only=True)\n",
+    "# Load the xlsb file\n",
+    "wb2_path = 'path_to_wb2.xlsb'  # Update with the actual path to wb2\n",
     "\n",
     "# Open the 'HC - Actual' sheet\n",
-    "sheet = wb2['HC - Actual']\n",
+    "with open_workbook(wb2_path) as wb:\n",
+    "    sheet = wb.get_sheet('HC - Actual')\n",
     "\n",
-    "# Check the contents of cells E15 and F15\n",
-    "E15 = sheet['E15'].value\n",
-    "F15 = sheet['F15'].value\n",
+    "    # Initialize variables to store the header row information\n",
+    "    E15 = None\n",
+    "    F15 = None\n",
+    "    data = []\n",
     "\n",
-    "# Define month headers\n",
+    "    # Iterate over the rows in the sheet\n",
+    "    for row in sheet.rows():\n",
+    "        row_index = row[0].r  # Get the row index (1-based)\n",
+    "\n",
+    "        # Get values for E15 and F15\n",
+    "        if row_index == 15:\n",
+    "            E15 = row[4].v  # E15\n",
+    "            F15 = row[5].v  # F15\n",
+    "\n",
+    "        # Collect all data starting from row 15\n",
+    "        if row_index >= 15:\n",
+    "            data.append([item.v for item in row])\n",
+    "\n",
+    "# Check if headers are in row 14 or row 15\n",
     "month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
     "\n",
-    "# Determine the row that contains the headers for month-wise data (D onwards)\n",
     "if E15 in month_headers and F15 in month_headers:\n",
-    "    header_row = 15\n",
+    "    header_row_index = 15\n",
     "else:\n",
-    "    header_row = 14\n",
+    "    header_row_index = 14\n",
     "\n",
-    "# Load data using pandas, specifying the header row and starting data from row 15\n",
-    "wb2_df = pd.read_excel(wb2_path, sheet_name='HC - Actual', header=header_row - 1, skiprows=range(0, 14))\n",
+    "# Now process the data using pandas\n",
+    "# Adjust headers depending on the determined header row\n",
+    "if header_row_index == 15:\n",
+    "    headers = data[0]  # Row 15 is the header\n",
+    "    final_data = data[1:]  # Data starts from row 16\n",
+    "else:\n",
+    "    headers = data[1]  # Row 14 is the header\n",
+    "    final_data = data[2:]  # Data starts from row 15\n",
     "\n",
-    "# Output the final DataFrame\n",
-    "print(wb2_df)\n",
+    "# Create a DataFrame using pandas\n",
+    "df = pd.DataFrame(final_data, columns=headers)\n",
     "\n",
-    "# If you need to save the result to a new workbook or file\n",
-    "output_path = 'final_data.xlsx'  # Set the desired output file path\n",
-    "wb2_df.to_excel(output_path, index=False)\n"
+    "# Output the DataFrame\n",
+    "print(df)\n",
+    "\n",
+    "# If you want to save it as a new Excel file (in xlsx format)\n",
+    "output_path = 'final_data.xlsx'  # Update this path as needed\n",
+    "df.to_excel(output_path, index=False)\n"
    ]
   },
   {
