--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f260ede",
+   "id": "c8b0d8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,49 +17,48 @@
     "with open_workbook(wb2_path) as wb:\n",
     "    sheet = wb.get_sheet('HC - Actual')\n",
     "\n",
-    "    # Initialize variables to store the header row information\n",
+    "    # Initialize variables\n",
     "    E15 = None\n",
     "    F15 = None\n",
     "    data = []\n",
+    "    row_counter = 0\n",
     "\n",
-    "    # Iterate over the rows in the sheet\n",
+    "    # Iterate over rows and extract values\n",
     "    for row in sheet.rows():\n",
-    "        row_index = row[0].r  # Get the row index (1-based)\n",
+    "        row_index = row[0].r  # Row index starts at 1 in xlsb\n",
     "\n",
-    "        # Get values for E15 and F15\n",
+    "        # Check and capture values in row 15\n",
     "        if row_index == 15:\n",
     "            E15 = row[4].v  # E15\n",
     "            F15 = row[5].v  # F15\n",
     "\n",
-    "        # Collect all data starting from row 15\n",
-    "        if row_index >= 15:\n",
+    "        # Capture the full data for row 14 and row 15 (header candidates) and subsequent rows\n",
+    "        if row_index >= 14:\n",
     "            data.append([item.v for item in row])\n",
     "\n",
-    "# Check if headers are in row 14 or row 15\n",
+    "# Identify if row 14 or 15 should be headers based on E15 and F15 values\n",
     "month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
     "\n",
     "if E15 in month_headers and F15 in month_headers:\n",
-    "    header_row_index = 15\n",
+    "    header_row_index = 15  # Headers are in row 15\n",
+    "    header_row = data[1]   # Row 15 is the second element in 'data' (index 1)\n",
+    "    start_data_row = 2     # Data starts from the row after headers (row 16)\n",
     "else:\n",
-    "    header_row_index = 14\n",
+    "    header_row_index = 14  # Headers are in row 14\n",
+    "    header_row = data[0]   # Row 14 is the first element in 'data' (index 0)\n",
+    "    start_data_row = 1     # Data starts from the row after headers (row 15)\n",
     "\n",
-    "# Now process the data using pandas\n",
-    "# Adjust headers depending on the determined header row\n",
-    "if header_row_index == 15:\n",
-    "    headers = data[0]  # Row 15 is the header\n",
-    "    final_data = data[1:]  # Data starts from row 16\n",
-    "else:\n",
-    "    headers = data[1]  # Row 14 is the header\n",
-    "    final_data = data[2:]  # Data starts from row 15\n",
+    "# Get the data from the relevant rows starting from row 15 (data row)\n",
+    "final_data = data[start_data_row:]\n",
     "\n",
-    "# Create a DataFrame using pandas\n",
-    "df = pd.DataFrame(final_data, columns=headers)\n",
+    "# Create a DataFrame using pandas with the correct headers and data\n",
+    "df = pd.DataFrame(final_data, columns=header_row)\n",
     "\n",
     "# Output the DataFrame\n",
     "print(df)\n",
     "\n",
-    "# If you want to save it as a new Excel file (in xlsx format)\n",
-    "output_path = 'final_data.xlsx'  # Update this path as needed\n",
+    "# If you want to save the final result to an Excel file (optional)\n",
+    "output_path = 'final_data.xlsx'  # Adjust the output path if needed\n",
     "df.to_excel(output_path, index=False)\n"
    ]
   },
