--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef6740ce",
+   "id": "8137a657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,49 +17,47 @@
     "with open_workbook(wb2_path) as wb:\n",
     "    sheet = wb.get_sheet('HC - Actual')\n",
     "\n",
-    "    # Initialize variables\n",
-    "    E15 = None\n",
-    "    F15 = None\n",
+    "    # Initialize variables to capture data and headers\n",
     "    data = []\n",
-    "\n",
-    "    # Iterate over rows and extract values\n",
+    "    E15, F15 = None, None\n",
+    "    \n",
+    "    # Iterate over rows and capture values\n",
     "    for row in sheet.rows():\n",
     "        row_index = row[0].r  # Row index starts at 1 in xlsb\n",
     "\n",
-    "        # Check and capture values in row 15\n",
+    "        # Check and capture values for E15 and F15\n",
     "        if row_index == 15:\n",
     "            E15 = row[4].v  # E15\n",
     "            F15 = row[5].v  # F15\n",
     "\n",
-    "        # Capture all data starting from row 14 (header candidates and data)\n",
+    "        # Capture data starting from row 14 (header candidates and data)\n",
     "        if row_index >= 14:\n",
     "            data.append([item.v for item in row])\n",
     "\n",
-    "# Identify if row 14 or 15 should be headers based on E15 and F15 values\n",
+    "# Define possible month headers\n",
     "month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
     "\n",
+    "# Determine header rows based on E15 and F15\n",
     "if E15 in month_headers and F15 in month_headers:\n",
-    "    header_row_index = 15  # Headers are in row 15\n",
-    "    # Use row 15 headers for columns A, B, C and month headers from row 15 for D onwards\n",
-    "    headers = data[1][:3] + data[1][3:]  # Combine headers from row 15 for D onwards\n",
-    "    start_data_row = 2     # Data starts from the row after headers (row 16)\n",
+    "    # Headers for D onwards are in row 15\n",
+    "    headers = data[1][:3] + data[1][3:]  # A, B, C from row 15, D onwards from row 15\n",
+    "    start_data_row = 2     # Data starts from row 16\n",
     "else:\n",
-    "    header_row_index = 14  # Headers are in row 14\n",
-    "    # Use row 15 headers for columns A, B, C and month headers from row 14 for D onwards\n",
-    "    headers = data[1][:3] + data[0][3:]  # Use headers from row 15 for A, B, C, and row 14 for D onwards\n",
+    "    # Headers for D onwards are in row 14\n",
+    "    headers = data[1][:3] + data[0][3:]  # A, B, C from row 15, D onwards from row 14\n",
     "    start_data_row = 2     # Data starts from row 15\n",
     "\n",
-    "# Extract the data from the relevant rows starting from row 15 (data rows)\n",
+    "# Extract the data starting from the correct row (after headers)\n",
     "final_data = data[start_data_row:]\n",
     "\n",
-    "# Create a DataFrame using pandas with the correct headers and data\n",
+    "# Create a DataFrame using pandas with the correct headers\n",
     "df = pd.DataFrame(final_data, columns=headers)\n",
     "\n",
     "# Output the DataFrame\n",
     "print(df)\n",
     "\n",
     "# Save the DataFrame to an Excel file if needed\n",
-    "output_path = 'final_data.xlsx'  # Update the output path as needed\n",
+    "output_path = 'final_data.xlsx'  # Adjust the output path if needed\n",
     "df.to_excel(output_path, index=False)\n"
    ]
   },
