--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8137a657",
+   "id": "67995bff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,33 +19,37 @@
     "\n",
     "    # Initialize variables to capture data and headers\n",
     "    data = []\n",
+    "    row_14 = None\n",
+    "    row_15 = None\n",
     "    E15, F15 = None, None\n",
     "    \n",
     "    # Iterate over rows and capture values\n",
     "    for row in sheet.rows():\n",
     "        row_index = row[0].r  # Row index starts at 1 in xlsb\n",
     "\n",
-    "        # Check and capture values for E15 and F15\n",
-    "        if row_index == 15:\n",
-    "            E15 = row[4].v  # E15\n",
-    "            F15 = row[5].v  # F15\n",
-    "\n",
-    "        # Capture data starting from row 14 (header candidates and data)\n",
-    "        if row_index >= 14:\n",
+    "        if row_index == 14:\n",
+    "            row_14 = [item.v for item in row]  # Capture row 14\n",
+    "        elif row_index == 15:\n",
+    "            row_15 = [item.v for item in row]  # Capture row 15\n",
+    "            E15 = row[4].v  # E15 value\n",
+    "            F15 = row[5].v  # F15 value\n",
+    "        \n",
+    "        # Capture data from row 15 onward\n",
+    "        if row_index >= 15:\n",
     "            data.append([item.v for item in row])\n",
     "\n",
     "# Define possible month headers\n",
     "month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
     "\n",
-    "# Determine header rows based on E15 and F15\n",
+    "# Build the correct headers\n",
     "if E15 in month_headers and F15 in month_headers:\n",
     "    # Headers for D onwards are in row 15\n",
-    "    headers = data[1][:3] + data[1][3:]  # A, B, C from row 15, D onwards from row 15\n",
-    "    start_data_row = 2     # Data starts from row 16\n",
+    "    headers = row_15[:3] + row_15[3:]  # A, B, C from row 15, D onwards from row 15\n",
+    "    start_data_row = 1     # Data starts from row 16 in the data array\n",
     "else:\n",
     "    # Headers for D onwards are in row 14\n",
-    "    headers = data[1][:3] + data[0][3:]  # A, B, C from row 15, D onwards from row 14\n",
-    "    start_data_row = 2     # Data starts from row 15\n",
+    "    headers = row_15[:3] + row_14[3:]  # A, B, C from row 15, D onwards from row 14\n",
+    "    start_data_row = 1     # Data starts from row 15 in the data array\n",
     "\n",
     "# Extract the data starting from the correct row (after headers)\n",
     "final_data = data[start_data_row:]\n",
