--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -7,62 +7,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import openpyxl\n",
     "from pyxlsb import open_workbook\n",
     "\n",
-    "# Load the xlsb file\n",
-    "wb2_path = 'path_to_wb2.xlsb'  # Update with the actual path to wb2\n",
+    "# Paths to the workbooks\n",
+    "wb1_path = 'Cost Report Macro.xlsm'  # The target workbook (macro-enabled workbook)\n",
+    "wb2_path = 'path_to_wb2.xlsb'        # The source workbook (xlsb file)\n",
     "\n",
-    "# Open the 'HC - Actual' sheet\n",
-    "with open_workbook(wb2_path) as wb:\n",
-    "    sheet = wb.get_sheet('HC - Actual')\n",
+    "# Open wb1 (xlsm) using openpyxl\n",
+    "wb1 = openpyxl.load_workbook(wb1_path, keep_vba=True)  # Use keep_vba=True to preserve macros\n",
     "\n",
-    "    # Initialize variables to capture data and headers\n",
-    "    data = []\n",
-    "    row_14 = None\n",
-    "    row_15 = None\n",
-    "    E15, F15 = None, None\n",
-    "    \n",
-    "    # Iterate over rows and capture values\n",
-    "    for row in sheet.rows():\n",
-    "        row_index = row[0].r  # Row index starts at 1 in xlsb\n",
-    "\n",
-    "        if row_index == 14:\n",
-    "            row_14 = [item.v for item in row]  # Capture row 14\n",
-    "        elif row_index == 15:\n",
-    "            row_15 = [item.v for item in row]  # Capture row 15\n",
-    "            E15 = row[4].v  # E15 value\n",
-    "            F15 = row[5].v  # F15 value\n",
-    "        \n",
-    "        # Capture data from row 15 onward\n",
-    "        if row_index >= 15:\n",
-    "            data.append([item.v for item in row])\n",
-    "\n",
-    "# Define possible month headers\n",
-    "month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
-    "\n",
-    "# Build the correct headers\n",
-    "if E15 in month_headers and F15 in month_headers:\n",
-    "    # Headers for D onwards are in row 15\n",
-    "    headers = row_15[:3] + row_15[3:]  # A, B, C from row 15, D onwards from row 15\n",
-    "    start_data_row = 1     # Data starts from row 16 in the data array\n",
+    "# Get the 'Paste' sheet or create it if it doesn't exist\n",
+    "if 'Paste' in wb1.sheetnames:\n",
+    "    ws1 = wb1['Paste']\n",
     "else:\n",
-    "    # Headers for D onwards are in row 14\n",
-    "    headers = row_15[:3] + row_14[3:]  # A, B, C from row 15, D onwards from row 14\n",
-    "    start_data_row = 1     # Data starts from row 15 in the data array\n",
+    "    ws1 = wb1.create_sheet('Paste')\n",
     "\n",
-    "# Extract the data starting from the correct row (after headers)\n",
-    "final_data = data[start_data_row:]\n",
+    "# Open wb2 (xlsb) using pyxlsb\n",
+    "with open_workbook(wb2_path) as wb2:\n",
+    "    # Loop through all sheets in wb2 and filter based on the name\n",
+    "    for sheetname in wb2.sheets:\n",
+    "        # Check if the sheet name contains 'excl', 'Pivot', or 'TM1' (case-insensitive)\n",
+    "        if any(exclude_word.lower() in sheetname.lower() for exclude_word in ['excl', 'Pivot', 'TM1']):\n",
+    "            continue  # Skip this sheet\n",
     "\n",
-    "# Create a DataFrame using pandas with the correct headers\n",
-    "df = pd.DataFrame(final_data, columns=headers)\n",
+    "        # Load the current sheet in wb2\n",
+    "        with wb2.get_sheet(sheetname) as ws2:\n",
+    "            # Read the data row by row and append to ws1 (the target sheet in wb1)\n",
+    "            for row in ws2.rows():\n",
+    "                # Extract the values in each row (convert to list of values)\n",
+    "                row_values = [item.v for item in row]\n",
+    "                ws1.append(row_values)  # Append the data to the 'Paste' sheet\n",
     "\n",
-    "# Output the DataFrame\n",
-    "print(df)\n",
+    "# Save the updated wb1 after transferring data\n",
+    "wb1.save(wb1_path)\n",
     "\n",
-    "# Save the DataFrame to an Excel file if needed\n",
-    "output_path = 'final_data.xlsx'  # Adjust the output path if needed\n",
-    "df.to_excel(output_path, index=False)\n"
+    "print(\"Data transfer completed successfully!\")\n"
    ]
   },
   {
