--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -7,42 +7,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openpyxl\n",
+    "import pandas as pd\n",
     "from pyxlsb import open_workbook\n",
     "\n",
-    "# Paths to the workbooks\n",
-    "wb1_path = 'Cost Report Macro.xlsm'  # The target workbook (macro-enabled workbook)\n",
-    "wb2_path = 'path_to_wb2.xlsb'        # The source workbook (xlsb file)\n",
+    "# Path to the xlsb file (wb2)\n",
+    "wb2_path = 'path_to_wb2.xlsb'\n",
     "\n",
-    "# Open wb1 (xlsm) using openpyxl\n",
-    "wb1 = openpyxl.load_workbook(wb1_path, keep_vba=True)  # Use keep_vba=True to preserve macros\n",
+    "# Function to find the header row based on 'Entity', 'RTN Level 4', 'Account'\n",
+    "def find_header_row(sheet):\n",
+    "    header_row = None\n",
+    "    # Iterate through rows to find the correct header row\n",
+    "    for row_num, row in enumerate(sheet.rows()):\n",
+    "        values = [item.v for item in row]\n",
+    "        if len(values) >= 3 and values[0] == 'Entity' and values[1] == 'RTN Level 4' and values[2] == 'Account':\n",
+    "            header_row = row_num + 1  # Store the correct header row index (1-based)\n",
+    "            break\n",
+    "    return header_row\n",
     "\n",
-    "# Get the 'Paste' sheet or create it if it doesn't exist\n",
-    "if 'Paste' in wb1.sheetnames:\n",
-    "    ws1 = wb1['Paste']\n",
-    "else:\n",
-    "    ws1 = wb1.create_sheet('Paste')\n",
+    "# Function to process a sheet and clean it up\n",
+    "def process_sheet(sheet, sheet_name):\n",
+    "    data = []\n",
+    "    header_row = find_header_row(sheet)\n",
     "\n",
-    "# Open wb2 (xlsb) using pyxlsb\n",
+    "    if header_row is None:\n",
+    "        print(f\"Header row not found in sheet: {sheet_name}\")\n",
+    "        return None\n",
+    "\n",
+    "    # Read the sheet into a pandas dataframe, starting from the identified header row\n",
+    "    for row in sheet.rows():\n",
+    "        data.append([item.v for item in row])\n",
+    "    \n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    # Adjust headers for columns D onwards based on the content of columns E and F\n",
+    "    if header_row < len(df) and 'M01' in str(df.iloc[header_row, 4]) and 'M02' in str(df.iloc[header_row, 5]):\n",
+    "        headers = df.iloc[header_row].values  # Take headers from the header row\n",
+    "    else:\n",
+    "        headers = df.iloc[header_row - 1].values  # Take headers from the row above\n",
+    "\n",
+    "    # Set the correct headers and remove unwanted rows\n",
+    "    df.columns = headers\n",
+    "    df = df[header_row + 1:].reset_index(drop=True)  # Keep only the rows after the header\n",
+    "\n",
+    "    # Drop rows where all values are NaN or None\n",
+    "    df.dropna(how='all', inplace=True)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Open the xlsb workbook and process valid sheets\n",
     "with open_workbook(wb2_path) as wb2:\n",
-    "    # Loop through all sheets in wb2 and filter based on the name\n",
     "    for sheetname in wb2.sheets:\n",
-    "        # Check if the sheet name contains 'excl', 'Pivot', or 'TM1' (case-insensitive)\n",
+    "        # Exclude sheets with 'excl', 'Pivot', or 'TM1'\n",
     "        if any(exclude_word.lower() in sheetname.lower() for exclude_word in ['excl', 'Pivot', 'TM1']):\n",
-    "            continue  # Skip this sheet\n",
+    "            print(f\"Skipping sheet: {sheetname}\")\n",
+    "            continue\n",
     "\n",
-    "        # Load the current sheet in wb2\n",
-    "        with wb2.get_sheet(sheetname) as ws2:\n",
-    "            # Read the data row by row and append to ws1 (the target sheet in wb1)\n",
-    "            for row in ws2.rows():\n",
-    "                # Extract the values in each row (convert to list of values)\n",
-    "                row_values = [item.v for item in row]\n",
-    "                ws1.append(row_values)  # Append the data to the 'Paste' sheet\n",
-    "\n",
-    "# Save the updated wb1 after transferring data\n",
-    "wb1.save(wb1_path)\n",
-    "\n",
-    "print(\"Data transfer completed successfully!\")\n"
+    "        with wb2.get_sheet(sheetname) as sheet:\n",
+    "            print(f\"Processing sheet: {sheetname}\")\n",
+    "            df = process_sheet(sheet, sheetname)\n",
+    "            \n",
+    "            if df is not None:\n",
+    "                print(f\"Final Data for {sheetname}:\")\n",
+    "                print(df.head())  # Display the first few rows of the final dataframe\n"
    ]
   },
   {
