--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -9,9 +9,14 @@
    "source": [
     "import pandas as pd\n",
     "from pyxlsb import open_workbook\n",
+    "from openpyxl import Workbook\n",
     "\n",
     "# Path to the xlsb file (wb2)\n",
     "wb2_path = 'path_to_wb2.xlsb'\n",
+    "\n",
+    "# New Excel workbook to store the sheets that are not excluded\n",
+    "new_wb = Workbook()\n",
+    "new_wb.remove(new_wb.active)  # Remove the default sheet\n",
     "\n",
     "# Function to find the header row based on 'Entity', 'RTN Level 4', 'Account'\n",
     "def find_header_row(sheet):\n",
@@ -20,7 +25,7 @@
     "    for row_num, row in enumerate(sheet.rows()):\n",
     "        values = [item.v for item in row]\n",
     "        if len(values) >= 3 and values[0] == 'Entity' and values[1] == 'RTN Level 4' and values[2] == 'Account':\n",
-    "            header_row = row_num + 1  # Store the correct header row index (1-based)\n",
+    "            header_row = row_num  # Store the correct header row index (0-based)\n",
     "            break\n",
     "    return header_row\n",
     "\n",
@@ -33,21 +38,33 @@
     "        print(f\"Header row not found in sheet: {sheet_name}\")\n",
     "        return None\n",
     "\n",
-    "    # Read the sheet into a pandas dataframe, starting from the identified header row\n",
+    "    # Read the sheet into a list of lists (rows of data)\n",
     "    for row in sheet.rows():\n",
     "        data.append([item.v for item in row])\n",
-    "    \n",
+    "\n",
+    "    # Convert data to a pandas dataframe\n",
     "    df = pd.DataFrame(data)\n",
     "\n",
-    "    # Adjust headers for columns D onwards based on the content of columns E and F\n",
-    "    if header_row < len(df) and 'M01' in str(df.iloc[header_row, 4]) and 'M02' in str(df.iloc[header_row, 5]):\n",
-    "        headers = df.iloc[header_row].values  # Take headers from the header row\n",
-    "    else:\n",
-    "        headers = df.iloc[header_row - 1].values  # Take headers from the row above\n",
+    "    # Check the values of E15 and F15 (row 15 is 0-based index 14 in pandas)\n",
+    "    E15_val = str(df.iloc[header_row + 1, 4])  # Value in column E (0-indexed, so 4)\n",
+    "    F15_val = str(df.iloc[header_row + 1, 5])  # Value in column F (0-indexed, so 5)\n",
     "\n",
-    "    # Set the correct headers and remove unwanted rows\n",
+    "    # Define possible month headers\n",
+    "    month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
+    "\n",
+    "    # Adjust headers for columns D onwards based on the content of columns E and F\n",
+    "    if E15_val in month_headers and F15_val in month_headers:\n",
+    "        # Use row 15 for headers (index 14 in pandas)\n",
+    "        headers = df.iloc[header_row + 1].values  # Take headers from row 15\n",
+    "        start_data_row = header_row + 2  # Data starts after row 15\n",
+    "    else:\n",
+    "        # Use row 14 for headers (index 13 in pandas)\n",
+    "        headers = df.iloc[header_row].values  # Take headers from row 14\n",
+    "        start_data_row = header_row + 1  # Data starts after row 14\n",
+    "\n",
+    "    # Set the correct headers for the dataframe\n",
     "    df.columns = headers\n",
-    "    df = df[header_row + 1:].reset_index(drop=True)  # Keep only the rows after the header\n",
+    "    df = df[start_data_row:].reset_index(drop=True)  # Keep only rows after the header\n",
     "\n",
     "    # Drop rows where all values are NaN or None\n",
     "    df.dropna(how='all', inplace=True)\n",
@@ -67,14 +84,26 @@
     "            df = process_sheet(sheet, sheetname)\n",
     "            \n",
     "            if df is not None:\n",
-    "                print(f\"Final Data for {sheetname}:\")\n",
-    "                print(df.head())  # Display the first few rows of the final dataframe\n"
+    "                # Save DataFrame to a new sheet in the new workbook\n",
+    "                new_sheet = new_wb.create_sheet(title=sheetname)\n",
+    "                \n",
+    "                # Write the headers to the sheet\n",
+    "                new_sheet.append(df.columns.tolist())\n",
+    "                \n",
+    "                # Write the data rows to the sheet\n",
+    "                for row in df.itertuples(index=False, name=None):\n",
+    "                    new_sheet.append(row)\n",
+    "\n",
+    "# Save the new workbook with the non-excluded sheets\n",
+    "output_path = 'non_excluded_sheets_with_headers.xlsx'\n",
+    "new_wb.save(output_path)\n",
+    "print(f\"Workbook with non-excluded sheets and correct headers has been saved to '{output_path}'\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "420ba826",
+   "id": "88079e73",
    "metadata": {},
    "outputs": [],
    "source": [
