--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -12,7 +12,7 @@
     "from openpyxl import Workbook\n",
     "\n",
     "# Path to the xlsb file (wb2)\n",
-    "wb2_path = 'path_to_wb2.xlsb'\n",
+    "wb2_path = 'path_to_wb2.xlsb'  # Update with your actual path\n",
     "\n",
     "# New Excel workbook to store the sheets that are not excluded\n",
     "new_wb = Workbook()\n",
@@ -21,55 +21,58 @@
     "# Function to find the header row based on 'Entity', 'RTN Level 4', 'Account'\n",
     "def find_header_row(sheet):\n",
     "    header_row = None\n",
-    "    # Iterate through rows to find the correct header row\n",
-    "    for row_num, row in enumerate(sheet.rows()):\n",
-    "        values = [item.v for item in row]\n",
-    "        if len(values) >= 3 and values[0] == 'Entity' and values[1] == 'RTN Level 4' and values[2] == 'Account':\n",
-    "            header_row = row_num  # Store the correct header row index (0-based)\n",
+    "    # Read the sheet into a list for easier access\n",
+    "    sheet_data = []\n",
+    "    for row in sheet.rows():\n",
+    "        sheet_data.append([item.v for item in row])\n",
+    "    \n",
+    "    # Iterate through the rows to find the header row\n",
+    "    for row_num, row in enumerate(sheet_data):\n",
+    "        if len(row) >= 3 and row[0] == 'Entity' and row[1] == 'RTN Level 4' and row[2] == 'Account':\n",
+    "            header_row = row_num  # Store the header row index (0-based)\n",
     "            break\n",
-    "    return header_row\n",
+    "    return header_row, sheet_data\n",
     "\n",
     "# Function to process a sheet and clean it up\n",
     "def process_sheet(sheet, sheet_name):\n",
-    "    data = []\n",
-    "    header_row = find_header_row(sheet)\n",
-    "\n",
+    "    header_row, sheet_data = find_header_row(sheet)\n",
     "    if header_row is None:\n",
     "        print(f\"Header row not found in sheet: {sheet_name}\")\n",
     "        return None\n",
     "\n",
-    "    # Read the sheet into a list of lists (rows of data)\n",
-    "    for row in sheet.rows():\n",
-    "        data.append([item.v for item in row])\n",
+    "    df = pd.DataFrame(sheet_data)\n",
     "\n",
-    "    # Convert data to a pandas dataframe\n",
-    "    df = pd.DataFrame(data)\n",
+    "    # Get headers for columns A, B, C from the header_row\n",
+    "    headers_ABC = df.iloc[header_row, :3].values.tolist()\n",
     "\n",
-    "    # Check the values of E15 and F15 (row 15 is 0-based index 14 in pandas)\n",
-    "    E15_val = str(df.iloc[header_row + 1, 4])  # Value in column E (0-indexed, so 4)\n",
-    "    F15_val = str(df.iloc[header_row + 1, 5])  # Value in column F (0-indexed, so 5)\n",
-    "\n",
-    "    # Define possible month headers\n",
-    "    month_headers = ['M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11', 'M12']\n",
-    "\n",
-    "    # Adjust headers for columns D onwards based on the content of columns E and F\n",
-    "    if E15_val in month_headers and F15_val in month_headers:\n",
-    "        # Use row 15 for headers (index 14 in pandas)\n",
-    "        headers = df.iloc[header_row + 1].values  # Take headers from row 15\n",
-    "        start_data_row = header_row + 2  # Data starts after row 15\n",
+    "    # Check if headers for columns D onwards are missing or None in header_row\n",
+    "    headers_D_onwards_in_header_row = df.iloc[header_row, 3:].values.tolist()\n",
+    "    if all(hdr is None or str(hdr).strip() == '' for hdr in headers_D_onwards_in_header_row):\n",
+    "        # Headers for columns D onwards are in the row above\n",
+    "        headers_D_onwards = df.iloc[header_row - 1, 3:].values.tolist()\n",
     "    else:\n",
-    "        # Use row 14 for headers (index 13 in pandas)\n",
-    "        headers = df.iloc[header_row].values  # Take headers from row 14\n",
-    "        start_data_row = header_row + 1  # Data starts after row 14\n",
+    "        # Headers for columns D onwards are in the header_row\n",
+    "        headers_D_onwards = headers_D_onwards_in_header_row\n",
     "\n",
-    "    # Set the correct headers for the dataframe\n",
-    "    df.columns = headers\n",
-    "    df = df[start_data_row:].reset_index(drop=True)  # Keep only rows after the header\n",
+    "    # Combine headers for all columns\n",
+    "    headers = headers_ABC + headers_D_onwards\n",
+    "\n",
+    "    # Data starts after the header_row\n",
+    "    start_data_row = header_row + 1\n",
+    "\n",
+    "    # Extract data starting from start_data_row\n",
+    "    data = df.iloc[start_data_row:, :].reset_index(drop=True)\n",
+    "\n",
+    "    # Set the combined headers\n",
+    "    data.columns = headers\n",
     "\n",
     "    # Drop rows where all values are NaN or None\n",
-    "    df.dropna(how='all', inplace=True)\n",
-    "    \n",
-    "    return df\n",
+    "    data.dropna(how='all', inplace=True)\n",
+    "\n",
+    "    # Optionally, you can fill NaN headers with placeholder names if needed\n",
+    "    # data.columns = ['Column_' + str(i) if col is None or str(col).strip() == '' else col for i, col in enumerate(data.columns)]\n",
+    "\n",
+    "    return data\n",
     "\n",
     "# Open the xlsb workbook and process valid sheets\n",
     "with open_workbook(wb2_path) as wb2:\n",
@@ -82,20 +85,20 @@
     "        with wb2.get_sheet(sheetname) as sheet:\n",
     "            print(f\"Processing sheet: {sheetname}\")\n",
     "            df = process_sheet(sheet, sheetname)\n",
-    "            \n",
+    "\n",
     "            if df is not None:\n",
     "                # Save DataFrame to a new sheet in the new workbook\n",
     "                new_sheet = new_wb.create_sheet(title=sheetname)\n",
-    "                \n",
+    "\n",
     "                # Write the headers to the sheet\n",
     "                new_sheet.append(df.columns.tolist())\n",
-    "                \n",
+    "\n",
     "                # Write the data rows to the sheet\n",
     "                for row in df.itertuples(index=False, name=None):\n",
     "                    new_sheet.append(row)\n",
     "\n",
     "# Save the new workbook with the non-excluded sheets\n",
-    "output_path = 'non_excluded_sheets_with_headers.xlsx'\n",
+    "output_path = 'non_excluded_sheets_with_correct_headers.xlsx'\n",
     "new_wb.save(output_path)\n",
     "print(f\"Workbook with non-excluded sheets and correct headers has been saved to '{output_path}'\")\n"
    ]
@@ -103,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88079e73",
+   "id": "3c11b6d3",
    "metadata": {},
    "outputs": [],
    "source": [
