--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -49,26 +49,32 @@
     "    try:\n",
     "        E15_val = str(df.iloc[header_row + 1, 4])  # Value in column E (0-indexed, so 4)\n",
     "        F15_val = str(df.iloc[header_row + 1, 5])  # Value in column F (0-indexed, so 5)\n",
+    "        print(f\"Debug: E15 value: {E15_val}, F15 value: {F15_val}\")\n",
     "    except IndexError:\n",
     "        E15_val = ''\n",
     "        F15_val = ''\n",
+    "        print(f\"Debug: E15 or F15 index out of range\")\n",
     "\n",
     "    # Define possible month headers\n",
     "    month_headers = ['M{:02d}'.format(i) for i in range(1, 13)]  # Generates 'M01' to 'M12'\n",
+    "    print(f\"Debug: Month headers: {month_headers}\")\n",
     "\n",
     "    # Prepare headers for columns A to C from row 15\n",
     "    headers_A_to_C = df.iloc[header_row + 1, :3].values  # Columns A to C headers from row 15\n",
+    "    print(f\"Debug: Headers A to C: {headers_A_to_C}\")\n",
     "\n",
     "    if E15_val in month_headers and F15_val in month_headers:\n",
     "        # Use row 15 for headers for all columns\n",
     "        headers_D_onwards = df.iloc[header_row + 1, 3:].values  # Columns D onwards headers from row 15\n",
     "        headers = list(headers_A_to_C) + list(headers_D_onwards)\n",
     "        start_data_row = header_row + 2  # Data starts after the header row\n",
+    "        print(\"Debug: Using headers from row 15 for columns D onwards\")\n",
     "    else:\n",
     "        # Use row 14 for columns D onwards\n",
     "        headers_D_onwards = df.iloc[header_row, 3:].values  # Columns D onwards headers from row 14\n",
     "        headers = list(headers_A_to_C) + list(headers_D_onwards)\n",
     "        start_data_row = header_row + 1  # Data starts after row 14\n",
+    "        print(\"Debug: Using headers from row 14 for columns D onwards\")\n",
     "\n",
     "    # Set the correct headers for the dataframe\n",
     "    df = df.iloc[start_data_row:].reset_index(drop=True)  # Keep only rows after the header\n",
@@ -111,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef290d7",
+   "id": "0aa7045c",
    "metadata": {},
    "outputs": [],
    "source": [
