--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f61aa07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Function to map 'Mxx' to actual periods\n",
+    "def map_month_to_period(month_str, year):\n",
+    "    months_map = {\n",
+    "        \"M01\": \"Jan\", \"M02\": \"Feb\", \"M03\": \"Mar\", \"M04\": \"Apr\", \"M05\": \"May\", \n",
+    "        \"M06\": \"Jun\", \"M07\": \"Jul\", \"M08\": \"Aug\", \"M09\": \"Sep\", \"M10\": \"Oct\", \n",
+    "        \"M11\": \"Nov\", \"M12\": \"Dec\"\n",
+    "    }\n",
+    "    month_abbr = months_map.get(month_str)\n",
+    "    return f\"{month_abbr}-{year}\"\n",
+    "\n",
+    "# Process HC sheet and populate the 'Paste' sheet\n",
+    "def process_hc_sheet(df, paste_df, sheet_name, year):\n",
+    "    # Find the last 3 columns with 'Mxx' values for the months\n",
+    "    month_cols = [col for col in df.columns if 'M' in col]\n",
+    "    if len(month_cols) < 3:\n",
+    "        print(f\"Not enough 'Mxx' columns found in {sheet_name}\")\n",
+    "        return\n",
+    "\n",
+    "    # Sort the columns to get the last three\n",
+    "    last_3_months = month_cols[-3:]\n",
+    "    \n",
+    "    for month_col in last_3_months:\n",
+    "        month_num = month_col[:3]  # Extract Mxx (e.g., M07)\n",
+    "        period = map_month_to_period(month_num, year)\n",
+    "        \n",
+    "        # Prepare the 'Paste' DataFrame row by row\n",
+    "        for _, row in df.iterrows():\n",
+    "            paste_row = {\n",
+    "                'File Name': sheet_name,\n",
+    "                'Entity': row['Entity'],\n",
+    "                'Function': row['RTN Level 4'],\n",
+    "                'FTE/Contractor': row[month_col],  # Value from the month column\n",
+    "                'Period': period,\n",
+    "                'Attribute Type': 'MoM',\n",
+    "            }\n",
+    "            # Append to 'Paste' DataFrame\n",
+    "            paste_df = paste_df.append(paste_row, ignore_index=True)\n",
+    "    \n",
+    "    return paste_df\n",
+    "\n",
+    "# Main script to process the sheets\n",
+    "def consolidate_hc_sheets(sheets_dict, year):\n",
+    "    # Initialize the 'Paste' DataFrame\n",
+    "    paste_columns = [\n",
+    "        'File Name','Level 3','Level 4','Cost Grouping','Cost Type','Finance Region', \n",
+    "        'Attribute Type','Period','Cost','FTE/Contractor','Country','Level 3.5','Level 4.5',\n",
+    "        'Entity','Function','Mapped Country','MICA'\n",
+    "    ]\n",
+    "    paste_df = pd.DataFrame(columns=paste_columns)\n",
+    "\n",
+    "    # Iterate through the sheets\n",
+    "    for sheet_name, df in sheets_dict.items():\n",
+    "        if 'HC' in sheet_name:\n",
+    "            paste_df = process_hc_sheet(df, paste_df, sheet_name, year)\n",
+    "\n",
+    "    return paste_df\n",
+    "\n",
+    "# Example usage\n",
+    "# Assuming 'sheets_dict' contains all loaded sheets as DataFrames\n",
+    "sheets_dict = {\n",
+    "    'HC_Sheet1': pd.DataFrame(...),  # Replace with actual loaded sheet data\n",
+    "    'HC_Sheet2': pd.DataFrame(...),\n",
+    "    # Add more sheets as needed\n",
+    "}\n",
+    "\n",
+    "# Call the function to process and consolidate HC sheets\n",
+    "final_paste_df = consolidate_hc_sheets(sheets_dict, 2024)\n",
+    "print(final_paste_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "67995bff",
    "metadata": {},
    "outputs": [],
@@ -117,7 +197,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6894f5c",
+   "id": "70cfed96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f78f90",
    "metadata": {},
    "outputs": [],
    "source": [
